# AntlerSolver

./: .gitignore  AntlerSolver  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dependency-reduced-pom.xml  figures.ipynb  pom.xml
include/: Graph.h
output_hidden/: 100Branching.txt  100Branching_standard_kernel.txt  100Reduction.txt  101Branching.txt  101Branching_standard_kernel.txt  101Reduction.txt  102Branching.txt  102Branching_standard_kernel.txt  102Reduction.txt  103Branching.txt  103Branching_standard_kernel.txt  104Branching.txt  104Branching_standard_kernel.txt  105Branching.txt  105Branching_standard_kernel.txt  106Reduction.txt  106Sol.txt  107Reduction.txt  107Sol.txt  108Reduction.txt  108Sol.txt  109Branching_standard_kernel.txt  109Sol.txt  10Branching.txt  10Branching_standard_kernel.txt  10Reduction.txt  110Branching.txt  110Branching_standard_kernel.txt  111Reduction.txt  111Sol.txt  112Sol.txt  113Reduction.txt  113Sol.txt  114Reduction.txt  114Sol.txt  115Reduction.txt  115Sol.txt  116Reduction.txt  116Sol.txt  117Reduction.txt  (+274 more)
output_public/: 001Reduction.txt  001Sol.txt  002Reduction.txt  002Sol.txt  003Reduction.txt  003Sol.txt  004Branching.txt  004Branching_standard_kernel.txt  004Reduction.txt  005Branching_standard_kernel.txt  005Reduction.txt  005Sol.txt  006Reduction.txt  006Sol.txt  007Reduction.txt  007Sol.txt  008Branching.txt  008Branching_standard_kernel.txt  008Reduction.txt  008Sol.txt  009Branching_standard_kernel.txt  009Reduction.txt  009Sol.txt  010Branching.txt  010Branching_standard_kernel.txt  (+214 more)
(+731 files in other folders)
